class Sessao:

    def __init__(self, horario, publico, filme_id, cinema_id):
        self.horario = horario
        self.publico = publico
        self.filme_id = filme_id
        self.cinema_id = cinema_id